--- a/doc/lispref/intro.texi
+++ b/doc/lispref/intro.texi
@@ -384,14 +384,14 @@ More generally,
 to an object of that type.  A plural of a type (such as @var{buffers})
 often means a list of objects of that type.  An argument named with the
 type @var{object} may be bound to an object of any type.
-(@xref{Lisp Data Types} for a list of Emacs object types.)  An argument
+(For a list of Emacs object types, @pxref{Lisp Data Types}.)  An argument
 with some other sort of name (e.g., @var{new-file}) is discussed
 specifically in the description of the function.  In some sections,
 features common to the arguments of several functions are described at
 the beginning.
 
-  @xref{Lambda Expressions} for a more complete description of arguments
-modified by @code{&optional} and @code{&rest}.
+  For a more complete description of arguments modified by
+@code{&optional} and @code{&rest}, @pxref{Lambda Expressions}.
 
   Command, macro, and special form descriptions have the same format,
 but the word `Function' is replaced by `Command', `Macro', or `Special
