Cleanup xmalloc. * admin/coccinelle/xzalloc.cocci: Semantic patch to convert calls to xmalloc with following memset to xzalloc. * src/lisp.h (xzalloc): New prototype.  Omit needless casts. * src/alloc.c (xzalloc): New function.  Omit needless casts. * src/charset.c: Omit needless casts.  Convert all calls to malloc with following memset to xzalloc. * src/dispnew.c: Likewise. * src/fringe.c: Likewise. * src/image.c: Likewise. * src/sound.c: Likewise. * src/term.c: Likewise. * src/w32fns.c: Likewise. * src/w32font.c: Likewise. * src/w32term.c: Likewise. * src/xfaces.c: Likewise. * src/xfns.c: Likewise. * src/xterm.c: Likewise. * src/atimer.c: Omit needless casts. * src/buffer.c: Likewise. * src/callproc.c: Likewise. * src/ccl.c: Likewise. * src/coding.c: Likewise. * src/composite.c: Likewise. * src/doc.c: Likewise. * src/doprnt.c: Likewise. * src/editfns.c: Likewise. * src/emacs.c: Likewise. * src/eval.c: Likewise. * src/filelock.c: Likewise. * src/fns.c: Likewise. * src/gtkutil.c: Likewise. * src/keyboard.c: Likewise. * src/lisp.h: Likewise. * src/lread.c: Likewise. * src/minibuf.c: Likewise. * src/msdos.c: Likewise. * src/print.c: Likewise. * src/process.c: Likewise. * src/region-cache.c: Likewise. * src/search.c: Likewise. * src/sysdep.c: Likewise. * src/termcap.c: Likewise. * src/terminal.c: Likewise. * src/tparam.c: Likewise. * src/w16select.c: Likewise. * src/w32.c: Likewise. * src/w32reg.c: Likewise. * src/w32select.c: Likewise. * src/w32uniscribe.c: Likewise. * src/widget.c: Likewise. * src/xdisp.c: Likewise. * src/xmenu.c: Likewise. * src/xrdb.c: Likewise. * src/xselect.c: Likewise.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,59 @@
+2012-07-05  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Cleanup xmalloc.
+	* lisp.h (xzalloc): New prototype.  Omit needless casts.
+	* alloc.c (xzalloc): New function.  Omit needless casts.
+	* charset.c: Omit needless casts.  Convert all calls to
+	xmalloc with following memset to xzalloc.
+	* dispnew.c: Likewise.
+	* fringe.c: Likewise.
+	* image.c: Likewise.
+	* sound.c: Likewise.
+	* term.c: Likewise.
+	* w32fns.c: Likewise.
+	* w32font.c: Likewise.
+	* w32term.c: Likewise.
+	* xfaces.c: Likewise.
+	* xfns.c: Likewise.
+	* xterm.c: Likewise.
+	* atimer.c: Omit needless casts.
+	* buffer.c: Likewise.
+	* callproc.c: Likewise.
+	* ccl.c: Likewise.
+	* coding.c: Likewise.
+	* composite.c: Likewise.
+	* doc.c: Likewise.
+	* doprnt.c: Likewise.
+	* editfns.c: Likewise.
+	* emacs.c: Likewise.
+	* eval.c: Likewise.
+	* filelock.c: Likewise.
+	* fns.c: Likewise.
+	* gtkutil.c: Likewise.
+	* keyboard.c: Likewise.
+	* lisp.h: Likewise.
+	* lread.c: Likewise.
+	* minibuf.c: Likewise.
+	* msdos.c: Likewise.
+	* print.c: Likewise.
+	* process.c: Likewise.
+	* region-cache.c: Likewise.
+	* search.c: Likewise.
+	* sysdep.c: Likewise.
+	* termcap.c: Likewise.
+	* terminal.c: Likewise.
+	* tparam.c: Likewise.
+	* w16select.c: Likewise.
+	* w32.c: Likewise.
+	* w32reg.c: Likewise.
+	* w32select.c: Likewise.
+	* w32uniscribe.c: Likewise.
+	* widget.c: Likewise.
+	* xdisp.c: Likewise.
+	* xmenu.c: Likewise.
+	* xrdb.c: Likewise.
+	* xselect.c: Likewise.
+
 2012-07-05  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* fileio.c (time_error_value): Check the right error number.
