--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-05  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* coccinelle/xzalloc.cocci: Semantic patch to convert
+	calls to xmalloc with following memset to xzalloc.
+
 2012-07-04  Juanma Barranquero  <lekktu@gmail.com>
 
 	* CPP-DEFINES (LISP_FLOAT_TYPE): Remove, obsolete.
