Fix bug #11857 with messed up display for insanely large hscroll values.
 src/xdisp.c (window_hscroll_limited): New function.
 (pos_visible_p, init_iterator): Use it to avoid overflow of pixel
 coordinates when window's hscroll is set to insanely large
 values.
 src/window.h (struct window) <hscroll, min_hscroll>: Change type to 'int'.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,13 @@
+2012-07-05  Eli Zaretskii  <eliz@gnu.org>
+
+	* xdisp.c (window_hscroll_limited): New function.
+	(pos_visible_p, init_iterator): Use it to avoid overflow of pixel
+	coordinates when window's hscroll is set to insanely large
+	values.  (Bug#11857)
+
+	* window.h (struct window) <hscroll, min_hscroll>: Change type to
+	'int'.
+
 2012-07-05  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in ($(BLD)/dired.$(O), $(BLD)/fileio.$(O)): Fix typo.
