* src/Makefile.in (emacs$(EXEEXT)): Don't check for load-path shadows.
It has nothing to do with building Emacs, and no-one is likely to be
paying attention to the result.  The CANNOT_DUMP branch was pointless,
since it sets EMACSLOADPATH=$(lispsource) it is impossible for there
to ever be any shadows.  The EMACSLOADPATH setting was probably necessary
for emacs to work at all when uninstalled, given the way init_lread
works for the CANNOT_DUMP case.  Since -batch implies -q, in the
non-CANNOT_DUMP branch, any shadows could only come from site-lisp
files.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-06  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (emacs$(EXEEXT)): Don't check for load-path shadows.
+
 2012-07-05  Paul Eggert  <eggert@cs.ucla.edu>
 
 	More xmalloc and related cleanup.
