--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-06  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (cvs-update): Remove old alias.
+
 2012-07-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	Sync with Tramp 2.2.6-pre.
