--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,7 +1,7 @@
 2012-07-06  Richard Stallman  <rms@gnu.org>
 
 	* intro.texi (Evaluation Notation, A Sample Function Description):
-	Improve/undo previous changes.
+	(A Sample Variable Description): Improve/undo previous changes.
 
 2012-07-05  Glenn Morris  <rgm@gnu.org>
 
