--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-06  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* window.el (quit-window): Always restore window height when
+	it's saved in quit-restore parameter.
+
 2012-07-06  Glenn Morris  <rgm@gnu.org>
 
 	* simple.el (kill-whole-line): Doc tweak.
