--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,14 @@
 2012-07-06  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	Compile marker debugging code only if ENABLE_CHECKING is defined.
+	* marker.c (byte_char_debug_check, count_markers): Use
+	only if ENABLE_CHECKING is defined.
+	(byte_debug_flag): Remove.
+	(CONSIDER, buf_charpos_to_bytepos, buf_bytepos_to_charpos):
+	Always call byte_char_debug_check if ENABLE_CHECKING is defined.
+
+2012-07-06  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	Avoid code repetition in marker-related functions.
 	* marker.c (attach_marker): New function.
 	(Fset_marker, set_marker_restricted, set_marker_both)
