--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp.el (tramp-restricted-shell-hosts-alist): New defcustom.
+
+	* net/tramp-sh.el (tramp-maybe-open-connection): Handle it.
+
 2012-07-06  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (compile-one-process): Rename from "recompile".
