--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -127,7 +127,7 @@
 	(xg_event_is_for_scrollbar): Use Gdk Device functions for HAVE_GTK3.
 	(is_box_type): New function (Bug#11768).
 	(xg_tool_item_stale_p): Call is_box_type.
-	(xg_initialize): Get settings by calli<g gtk_settings_get_for_screen
+	(xg_initialize): Get settings by calling gtk_settings_get_for_screen
 	with default display (Bug#11768).
 
 2012-07-05  Eli Zaretskii  <eliz@gnu.org>
