--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,6 +1,12 @@
 2012-07-04  Juanma Barranquero	<lekktu@gmail.com>
 	    Eli Zaretskii  <eliz@gnu.org>
 
+	* config.nt: Complete rework to bring it in sync with autogen/config.in.
+	All Windows-specific code moved to src/s/ms-w32.h.
+
+2012-07-04  Juanma Barranquero	<lekktu@gmail.com>
+	    Eli Zaretskii  <eliz@gnu.org>
+
 	* configure.bat (enablechecking): Enable checks through src/config.h,
 	not the compiler's command line.
 
