--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-06  Glenn Morris  <rgm@gnu.org>
+
+	* files.el (toggle-read-only): Restrict message to interactive use.
+
 2012-07-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp.el (tramp-restricted-shell-hosts-alist): New defcustom.
