--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2012-07-06  Andreas Schwab  <schwab@linux-m68k.org>
 
+	* xfns.c (Fx_change_window_property): Doc fix.
+	* w32fns.c (Fx_change_window_property): Doc fix.
+
 	* w32fns.c (Fx_window_property): Accept the same arguments as the
 	X Windows version.  Doc fix.
 	* xfns.c (Fx_window_property): Doc fix.  (Bug#11870)
