--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-06  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* xfont.c (compare_font_names): Redo to omit the need for casts.
+
 2012-07-06  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* xfns.c (Fx_change_window_property): Doc fix.
