--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,13 @@
 2012-07-06  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* configure.in: Document --enable-gcc-warnings better.
+
 	Use c_strcasecmp for ASCII case-insensitive comparison (Bug#11786).
 	This is safer than strcasecmp, which has unspecified behavior
 	outside the POSIX locale and in practice sometimes does not work
 	in multibyte locales.  Similarly for c_strncasecmp and strncasecmp.
 	* configure.in (strcasecmp, strncasecmp): Remove checks.
+
 	* lib/c-ctype.c, lib/c-ctype.h, lib/c-strcase.h, lib/c-strcasecmp.c:
 	* lib/c-strncasecmp.c: New files, taken from gnulib.
 	* lib/gnulib.mk, m4/gnulib-comp.m4: Regenerate.
