Update Windows port to gnulib changes in revno:108922.
* lib-src/makefile.w32-in ($(BLD)/ctags.$(O), $(BLD)/etags.$(O)):
Update dependencies.

* lib/makefile.w32-in (GNULIBOBJS): Add $(BLD)/c-ctype.$(O),
$(BLD)/c-strcasecmp.$(O) and $(BLD)/c-strncasecmp.$(O).
($(BLD)/c-ctype.$(O), $(BLD)/c-strcasecmp.$(O))
($(BLD)/c-strncasecmp.$(O)): New dependencies.

* src/makefile.w32-in (DISPEXTERN_H, $(BLD)/regex.$(O)):
Update dependencies.

* src/s/ms-w32.h [_MSC_VER]: Remove strcasecmp, strncasecmp.

--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-07  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/ctags.$(O), $(BLD)/etags.$(O)):
+	Update dependencies.
+
 2012-07-06  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Use c_strcasecmp for ASCII case-insensitive comparison (Bug#11786).
