--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-07-07  Juanma Barranquero  <lekktu@gmail.com>
+
+	* lib/makefile.w32-in (GNULIBOBJS): Add $(BLD)/c-ctype.$(O),
+	$(BLD)/c-strcasecmp.$(O) and $(BLD)/c-strncasecmp.$(O).
+	($(BLD)/c-ctype.$(O), $(BLD)/c-strcasecmp.$(O))
+	($(BLD)/c-strncasecmp.$(O)): New dependencies.
+
 2012-07-06  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* configure.in: Document --enable-gcc-warnings better.
