--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-07-07  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in (DISPEXTERN_H, $(BLD)/regex.$(O)):
+	Update dependencies.
+
+	* s/ms-w32.h [_MSC_VER]: Remove strcasecmp, strncasecmp.
+
 2012-07-06  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Use c_strcasecmp for ASCII case-insensitive comparison (Bug#11786).
