--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-07  Chong Yidong  <cyd@gnu.org>
+
+	* simple.el (yank-pop-change-selection): Doc fix (Bug#11361).
+	(interprogram-cut-function, interprogram-paste-function): Mention
+	that we typically mean the clipboard.
+
 2012-07-06  Glenn Morris  <rgm@gnu.org>
 
 	* kmacro.el (kmacro-call-macro): Restore repeat message.  (Bug#11817)
