Add "site-lisp" to manual indices.
* custom.texi (Init File): Index site-lisp.

* doc/lispref/loading.texi (Library Search): Index site-lisp directories.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-07  Chong Yidong  <cyd@gnu.org>
+
+	* custom.texi (Init File): Index site-lisp (Bug#11435).
+
 2012-07-06  Chong Yidong  <cyd@gnu.org>
 
 	* emacs.texi: Re-order top-level menu to correspond to logical
